--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 # Runtime data
+example/server/node_modules/
+example/vue/node_modules/
+example/vue/dist/
 pids
 *.pid
 *.seed
