--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "javascript-lib-cli",
+  "name": "network",
   "version": "1.0.0",
   "main": "dist/network.umd.js",
   "author": "zm",
@@ -7,9 +7,11 @@
   "scripts": {
     "build": " rollup -c rollup.config.js"
   },
-  "peerDependencies": {
-    "axios": "^0.19.2",
-    "qs": "^6.9.3"
+  "dependencies": {
+    "@rollup/plugin-json": "^4.0.2",
+    "axios": "^0.18.0",
+    "qs": "^6.9.3",
+    "rollup-plugin-node-builtins": "^2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
@@ -21,9 +23,7 @@
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.5.0"
-  },
-  "dependencies": {
-
+    "rollup-plugin-sourcemaps": "^0.5.0",
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
